2004-08-13  Martin Mares  <mj@ucw.cz>

	* README.Windows: Updated.

	* maint/release: Substitute version number in win32/config.h.

	* win32/config.h: Added.

	* lib/sysdep.h (bzero, strcasecmp): are macros on Windows.

	* compat/getopt.[ch]: Added copies of getopt.[ch] from the GNU
	C library for use on systems where the default libraries lack
	proper getopt. Currently used by the Windows port.

	* lib/sysdep.h, lib/types.h: Updates of the Windows port from
	Alexander Stock.

	* lib/types.h: If PCI_HAVE_Uxx_TYPES is defined, libpci doesn't define
	its own u8, u16, u32, byte and word types and uses what the user
	has supplied instead. With this change, all namespace clashes should
	be gone.

	* Makefile, lib/Makefile: Updated dependencies.

	* pciutils.h: Include lib/sysdep.h and move NONRET et al. there.

	* lib/sysdep.h: No need to include <sys/types.h> on FreeBSD, because
	it is included unconditionally in lib/types.h.

	* Moved system-dependent stuff from lib/internal.h to lib/sysdep.h,
	which is also used by the utilities. Also moved type declarations
	from lib/pci.h to lib/types.h.

	* All files: Prepend a "PCI_" prefix in front of all configuration
	defines to avoid namespace clashes. CAVEAT: If there is any libpci
	application using the (undocumented) defines, it has to be updated.

	* lib/Makefile: Killed HAVE_OWN_HEADER_H, since we stopped sharing
	headers with the kernel a couple of years ago.

	* lib/sysfs.c (sysfs_get_resources): We have 7 resources, not 6.

	* lspci.c (show_rom): Use the same logic for printing disabled
	or unassigned ROM's as we do in show_bases() for the other BAR's.

	* lib/generic.c (pci_generic_fill_info): Better reaction to
	invalid 64-bit addresses. Also d->hdrtype should not include
	bit 7, which caused mysterious errors on multi-function devices.

	* lib/generic.c (pci_generic_fill_info): Fill in base addresses
	even if the regions are known to be disabled. It is the client's